kustomize/workers/email-worker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-worker
  namespace: workers
  labels:
    app: email-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: email-worker
  template:
    metadata:
      labels:
        app: email-worker
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: emailservice-worker-sa
      containers:
        - name: email-worker
          image: jukpozi/emailservice:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
